# Top-AMS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  platformio.ini  sdkconfig  sdkconfig.airm2m_core_esp32c3  sdkconfig_4MB  sdkconfig_esp32C3
.cursor/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
doc/: A1mini换料.gcode  Gcode配置.md  常见疑难杂症.md  编译教程.md
hard/N20电机方案/: README.md
main/: CMakeLists.txt  Top-AMS.cpp  bambu.hpp  config.h  config.hpp  config_example.hpp  convert_html_to_hpp.py  espMQTT.hpp  esptools.hpp  idf_component.yml  index.html  main.cpp  topams_config.hpp  web_sync.hpp
main/include/: bambu.h  espIO.h  espIO.hpp  espMQTT.hpp  espWIFI.h  espWIFI.hpp  tools.h
main/mesp/: channel.hpp  config.hpp  espIO.hpp  mqtt.hpp  nvs_value.hpp  smartWIFI.hpp  wsValue.hpp
main/mstd/: Exstring.hpp  Meta.hpp  flat_map.hpp  other.hpp  rangebase.hpp
openspec/: project.md
src/: Top-AMS.cpp
